while certificates are generated through the admin page are successfully saved to the mongo DB

--- a/frontend/public/certificate.html
+++ b/frontend/public/certificate.html
@@ -270,6 +270,23 @@
     });
     pdf.addImage(imgData, 'PNG', 0, 0, canvas.width, canvas.height);
     pdf.save(`${name.replace(/\s+/g,'_')}_certificate.pdf`);
+    // --- 5) Save data to MongoDB ---
+fetch('http://localhost:5000/api/certificates', {
+  method: 'POST',
+  headers: {
+    'Content-Type': 'application/json'
+  },
+  body: JSON.stringify({
+    name: name,
+    program: program,
+    duration: duration,
+    idNumber: idNo,
+    date: new Date().toISOString()
+  })
+})
+.then(response => response.json())
+.then(data => console.log('Certificate saved:', data))
+.catch(error => console.error('Error saving to database:', error));
   });
 </script>
 
